--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,6 +308,7 @@ input {
   outline: none !important;
   border: none;
 }
+
 @media (max-width: 768px) {
   .container {
     width: 750px;
@@ -323,4 +324,38 @@ input {
 
 .presence-section input[type='radio']{
   accent-color: black
+}
+
+
+.home-screen{
+  width: 100%;
+  height: 100%
+}
+
+.home-screen header{
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: solid red 1px;
+}
+
+.home-screen header .select{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: .5rem;
+  gap: .5rem;
+}
+
+.home-screen select{
+  outline: none;
+  padding: .5rem;
+  border: none;
+  background: rgba(255, 0, 0, 0.144);
+  border-radius: .5rem;
+}
+
+.home-screen select option{
+  background: white;
 }
