--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -4,72 +4,24 @@
 <div
   class="login container-fluid w-100 d-flex flex-column justify-content-center align-items-center mb-2 p-5 bg-light"
 >
-  <!-- to display presences of the current day -->
-  <div class="mt-5 container shadow-sm card m-2 py-5">
-    <h5 class="text-danger w-100 text-center">Présences du <%= date %></h5>
-    <div class="row w-100 d-flex justify-content-center mt-2">
-      <!--  -->
-      <% if(presencesToday && presencesToday.length > 0) { %>
-      <!--  -->
-      <% presencesToday.forEach(presence => { %>
-      <!--  -->
-      <div class="col-md-2 px-3 p-sm-1 col-sm-6">
-        <div class="card bg-light m-1">
-          <div class="card-body">
-            <h1 class="text-center text-danger"><%= presence.count %></h1>
-            <p class="card-text text-center"><%= presence.presence %></p>
-          </div>
+
+    <div class="home-screen">
+      <header>
+        <h3>Dashboard</h3>
+        <div class="select">
+          <select name="" id="">
+            <option value="Aujourdhui">Aujourdhui</option>
+            <option value="Semaine passée">Semaine passée</option>
+            <option value="Mois Passée">Mois Passée</option>
+          </select>
+          <select name="" id="">
+            <option value="Aujourdhui">Avant-Midi</option>
+            <option value="Semaine passée">Après-Midi</option>
+            <option value="Mois Passée">Mois Passée</option>
+          </select>
         </div>
-      </div>
-      <% }) %>
-      <!--  -->
-      <% } else { %>
-      <p class="w-100 text-center">Pas des presences pour aujourd'hui</p>
-      <% } %>
+      </header>
     </div>
-  </div>
-  <!-- to display presences of the current month -->
-  <div class="container shadow-sm card m-2 py-5">
-    <h5 class="text-danger w-100 text-center">Présences de ce mois</h5>
-    <div class="row d-flex justify-content-center mt-2">
-      <% if(allPresences.length > 0) { %> <% allPresences.forEach(pres => { %>
-      <div class="col-md-2 px-3 p-sm-1 col-sm-6">
-        <div class="card bg-light m-1">
-          <div class="card-body">
-            <h1 class="text-center text-danger"><%= pres.total %></h1>
-            <h5 class="card-text text-center text-danger">
-              <%= pres.presence %>
-            </h5>
-            <p class="text-center text-center">
-              <%= pres.isMatin ? 'avant midi' : 'apres midi' %>
-            </p>
-          </div>
-        </div>
-      </div>
-      <% }) %> <% } else { %>
-      <p class="w-100 text-center">Pas des presences pour ce mois</p>
-      <% } %>
-    </div>
-  </div>
-  <!-- to display all presences  -->
-  <div class="container shadow-sm card m-2 py-5 mb-2">
-    <h5 class="text-danger w-100 text-center">Total des présences</h5>
-    <div class="row d-flex justify-content-center mt-2">
-      <% if(allPresences.length > 0) { %> <% allPresences.forEach(pres => { %>
-      <div class="col-md-2 px-3 p-sm-1 col-sm-6">
-        <div class="card bg-light m-1">
-          <div class="card-body">
-            <h1 class="text-center text-danger"><%= pres.total %></h1>
-            <p class="card-text text-center"><%= pres.presence %></p>
-          </div>
-        </div>
-      </div>
-      <% }) %>
-      <!--  -->
-      <% } else { %>
-      <p class="w-100 text-center">Pas des presences disponible</p>
-      <% } %>
-    </div>
-  </div>
+   
   <%- include('../includes/footer.ejs')%>
 </div>
