style : add ui dashboard

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -329,7 +329,7 @@ input {
 
 .home-screen{
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
 .home-screen header{
@@ -337,7 +337,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: solid red 1px;
+  border-bottom: solid rgba(255, 0, 0, 0.275) 1px;
 }
 
 .home-screen header .select{
@@ -346,6 +346,44 @@ input {
   justify-content: space-evenly;
   padding: .5rem;
   gap: .5rem;
+}
+
+.home-screen main{
+  margin: 1.5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: .5rem;
+}
+
+.home-screen .card{
+  border: solid rgba(255, 0, 0, 0.275) 1px;
+}
+
+.card .head{
+  width: 100%;
+  border-bottom:  solid rgba(255, 0, 0, 0.275) 1px;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 .5rem;
+}
+
+.card .main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8rem;
+  padding: 0 1rem;
+  gap: .5rem;
+}
+
+.card .main .divider{
+  height: 100%;
+  width: 1px;
+  background: rgba(255, 0, 0, 0.397);
 }
 
 .home-screen select{
