--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head.ejs')%> <%- include('../includes/header.ejs')%>
 
 <div
-  class="login container-fluid w-100 d-flex flex-column justify-content-center align-items-center mb-2 p-5 bg-light"
+  class="login container-fluid w-100 d-flex flex-column  mb-2 p-5 bg-light"
 >
   <div class="home-screen">
     <header>
